<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Fragments.WishlistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wishlist_header"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtWishlistNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/wishlist_items" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerWishlist"
            android:layout_width="match_parent"
            android:layout_height="475dp"
            android:layout_marginTop="5dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnWishlistAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/wishlist_add"
                android:src="@drawable/btn_add"
                tools:src="@drawable/btn_add" />

            <ImageView
                android:id="@+id/btnWishlistTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/wishlist_transfer"
                android:src="@drawable/button_transfer"
                app:srcCompat="@drawable/button_transfer"
                tools:srcCompat="@drawable/button_transfer" />

            <ImageView
                android:id="@+id/btnWishlistEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/wishlist_edit"
                android:src="@drawable/btn_edit"
                app:srcCompat="@drawable/btn_edit"
                tools:srcCompat="@drawable/btn_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnWishlistHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/wishlist_home"
                android:src="@drawable/btn_home2"
                app:srcCompat="@drawable/btn_home2"
                tools:srcCompat="@drawable/btn_home2" />

            <ImageView
                android:id="@+id/btnWishlistClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/wishlist_clear"
                android:src="@drawable/button_clear"
                app:srcCompat="@drawable/button_clear"
                tools:srcCompat="@drawable/button_clear" />

            <ImageView
                android:id="@+id/btnWishlistDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/wishlist_delete"
                android:src="@drawable/btn_delete"
                app:srcCompat="@drawable/btn_delete"
                tools:srcCompat="@drawable/btn_delete" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>